[package]
name = "serdo"
version = "0.1.1-beta.1"
edition = "2021"
description = "Serializable do/undo library."
license = "Apache-2.0"
documentation = "https://github.com/ruimo/serdo"
homepage = "https://github.com/ruimo/serdo"
repository = "https://github.com/ruimo/serdo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
bincode = { version = "1", optional = true }
rusqlite = { version = "0", features = ["bundled"], optional = true }

[dev-dependencies]
tempfile = "3.3.0"

[features]
persistence = ["dep:serde", "dep:serde_json", "dep:rusqlite", "dep:bincode"]
