[package]
name = "serdo"
version = "0.1.5"
edition = "2021"
description = "Serializable do/undo library."
license = "Apache-2.0"
documentation = "https://github.com/ruimo/serdo"
homepage = "https://github.com/ruimo/serdo"
repository = "https://github.com/ruimo/serdo"

[workspace]
members = [
    "examples/*",
]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
bincode = { version = "1", optional = true }
rusqlite = { version = "0", features = ["bundled"], optional = true }
error-stack = "0.4.1"
cfg-if = "1.0.0"
example = "1.1.0"
tracing = "0"

[dev-dependencies]
tempfile = "3.3.0"
tracing-subscriber = { version= "0", features = ["env-filter"]}

[features]
persistence = ["dep:serde", "dep:serde_json", "dep:rusqlite", "dep:bincode"]
