[package]
name = "persistent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"]}
serdo = { path = "../..", features = ["persistence"] }
error-stack = "0.4.1"
clap = { version = "4.5.4", features = ["derive"] }

[dev-dependencies]
tempfile = "3.3.0"
